--- a/src/Components/Logos/Logos.scss
+++ b/src/Components/Logos/Logos.scss
@@ -16,6 +16,18 @@
       height: 50px;
       width: 12%;
       margin: 20px 50px;
+      @media (max-width: 1000px) {
+        margin: 20px 27px;
+        width: 15%;
+      }
+      @media (max-width: 540px) {
+        margin: 20px 18px;
+        width: 15%;
+      }
+      @media (max-width: 480px) {
+        margin: 20px 6px;
+        width: 20%;
+      }
     }
   }
 }
