--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,19 +1,40 @@
 .footer {
   color: aliceblue;
+  .name-row {
+    .row > * {
+      @media (max-width: 850px) {
+        width: 30% !important;
+      }
+      @media (max-width: 450px) {
+        width: unset !important;
+      }
+    }
+  }
   .name {
     margin: 30px 0;
   }
   .button-1 {
     background-color: #13124f;
     color: #ffffff;
+    position: relative;
     margin: 30px 0;
     border-radius: 40px;
+    @media (max-width: 850px) {
+      width: 50%;
+    }
+    @media (max-width: 450px) {
+      width: 85%;
+    }
     .button-2 {
       background-color: #8c8cda;
-      position: relative;
-      left: 200px;
-      width: 125px;
+      position: absolute;
+      left: 217px;
+      width: 187px;
+      bottom: 0;
       border-radius: 21px;
+      @media (max-width: 450px) {
+        left: 140px;
+      }
     }
   }
 }
