--- a/src/Components/JoinUs/JoinUs.scss
+++ b/src/Components/JoinUs/JoinUs.scss
@@ -1,27 +1,38 @@
 .joinus {
   margin: 7% 30px;
-  background-color: #a3d9d9;
+  background: linear-gradient(279.11deg, #a3d9d9 -23.08%, #5151d5 104.13%);
   display: flex;
   border-radius: 20px;
   align-items: center;
   text-align: center;
   flex-direction: column;
   h3 {
-    background-color: #a3d9d9;
-    padding: 30px;
+    background-color: transparent;
+    padding: 25px;
   }
   .part {
-    background-color: #a3d9d9;
+    background-color: transparent;
     width: 40%;
+    @media (max-width: 450px) {
+      width: 70%;
+    }
     h1 {
-      background-color: #a3d9d9;
+      background-color: transparent;
+      color: #ffffff;
       font-size: 60px;
       line-height: 90px;
+      @media (max-width: 850px) {
+        font-size: 33px;
+        line-height: 55px;
+      }
+      @media (max-width: 450px) {
+        font-size: 22px;
+      }
     }
   }
   Button {
     background-color: #000000;
-    margin: 40px 0;
+    margin: 10px 0 30px 0;
     color: #ffffff;
     padding: 15px 60px;
     border-radius: 40px;
