--- a/src/Components/Anaylze/Anaylze.scss
+++ b/src/Components/Anaylze/Anaylze.scss
@@ -53,6 +53,7 @@
       width: 50%;
       background-color: #8c8cda;
       border-radius: 40px;
+      margin: 0 35px;
       color: #ffffff;
       font-size: 19px;
       padding: 10px;
