--- a/src/Components/JoinUs/JoinUs.scss
+++ b/src/Components/JoinUs/JoinUs.scss
@@ -6,30 +6,37 @@
   align-items: center;
   text-align: center;
   flex-direction: column;
+
   h3 {
     background-color: transparent;
     padding: 25px;
   }
+
   .part {
     background-color: transparent;
     width: 40%;
+
     @media (max-width: 450px) {
       width: 70%;
     }
+
     h1 {
       background-color: transparent;
       color: #ffffff;
       font-size: 60px;
       line-height: 90px;
+
       @media (max-width: 850px) {
         font-size: 33px;
         line-height: 55px;
       }
+
       @media (max-width: 450px) {
         font-size: 22px;
       }
     }
   }
+
   Button {
     background-color: #000000;
     margin: 10px 0 30px 0;
@@ -37,5 +44,10 @@
     padding: 15px 60px;
     border-radius: 40px;
     font-size: 20px;
+
+    &:hover {
+      background-color: #000000;
+      color: #ffffff;
+    }
   }
 }
